--- a/AC Career Mode/MainWindow.xaml
+++ b/AC Career Mode/MainWindow.xaml
@@ -117,17 +117,21 @@
 
                                 <GridViewColumn Width="100" DisplayMemberBinding="{Binding Kms, StringFormat=G4}">
                                     <GridViewColumn.Header>
-                                        <GridViewColumnHeader Tag="Mileage" Click="MarketCarsLv_Click">Mileage</GridViewColumnHeader>
+                                        <GridViewColumnHeader Tag="Mileage" Click="MarketCarsLv_Click">Mileage (kms)</GridViewColumnHeader>
                                     </GridViewColumn.Header>
                                 </GridViewColumn>
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Image x:Name="Img_ForSaleCar" Grid.Column="1"  Margin="2,10,2,0" VerticalAlignment="Top" Height="100" Grid.RowSpan="2" />
+                    <Image x:Name="Img_ForSaleCar" Grid.Column="1"  Margin="2,0,2,0" VerticalAlignment="Top" Height="100" Grid.Row="1" />
                     <Button x:Name="b_BuyCar" Grid.Column="1" Content="Buy" IsEnabled="False" Grid.Row="2" Click="b_BuyCar_Click"/>
                 </Grid>
             </TabItem>
-            
+
+            <TabItem Header="Team">
+                
+            </TabItem>
+
             <TabItem Header="Profile">
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -156,7 +160,7 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <Image x:Name="img_OwnedCar" Grid.Column="1"  Margin="2,10,2,0" VerticalAlignment="Top" Height="100" Grid.RowSpan="2" />
+                    <Image x:Name="img_OwnedCar" Grid.Column="1"  Margin="2,0,2,0" VerticalAlignment="Top" Height="100" Grid.Row="1" />
                     <Button x:Name="b_SellCar" Grid.Column="1" Content="Sell" IsEnabled="False" Grid.Row="2" Click="b_SellCar_Click"/>
                 </Grid>
             </TabItem>
@@ -188,8 +192,8 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        
-        
+
+
         <Label x:Name="toplabel_User" Content="Gas" FontWeight="Bold" />
         <Label x:Name="toplabel_Money" Content="$10.000" Grid.Column="1" FontWeight="Bold" />
         <Label x:Name="toplabel_Wins" Content="🏆 11" Grid.Column="2" FontWeight="Bold" />
