--- a/AC Career Mode/MainWindow.xaml
+++ b/AC Career Mode/MainWindow.xaml
@@ -97,7 +97,29 @@
                         <RowDefinition/>
                         <RowDefinition Height="30"/>
                     </Grid.RowDefinitions>
-                    <ListView x:Name="lv_LoansLV" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,0,5,0" Grid.RowSpan="2" Grid.Row="1" >
+                    <ListView x:Name="lv_LoansAvailable" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,0,5,251" Grid.Row="1" MouseDoubleClick="lv_AvailableLoans_DoubleClick" >
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Width="100" DisplayMemberBinding="{Binding AmountLeft, StringFormat={}{0:##,#}}">
+                                    <GridViewColumnHeader Content="Amount"/>
+                                </GridViewColumn>
+
+                                <GridViewColumn Width="50" DisplayMemberBinding="{Binding InterestRate, StringFormat={}{0}%}">
+                                    <GridViewColumnHeader Content="Interest"/>
+                                </GridViewColumn>
+
+                                <GridViewColumn Width="100" DisplayMemberBinding="{Binding BillingInterval}">
+                                    <GridViewColumnHeader Content="Interval" />
+                                </GridViewColumn>
+
+                                <GridViewColumn Width="100" DisplayMemberBinding="{Binding Installment, StringFormat={}{0:##,#}}">
+                                    <GridViewColumnHeader Content="Installment" />
+                                </GridViewColumn>
+
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                    <ListView x:Name="lv_PlayerLoans" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}" Margin="0,193,5,0" Grid.Row="1" MouseDoubleClick="lv_PlayerLoans_DoubleClick" >
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Width="100" DisplayMemberBinding="{Binding AmountLeft, StringFormat={}{0:##,#}}">
