--- a/AC Career Mode/controls/HistoryTab.xaml
+++ b/AC Career Mode/controls/HistoryTab.xaml
@@ -5,18 +5,17 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AC_Career_Mode.controls"
              mc:Ignorable="d" 
+             x:Name="RecordsUC"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
-            <ColumnDefinition Width="200"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="30"/>
             <RowDefinition/>
-            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <ListView x:Name="RecordsCtrl_lv" SelectionMode="Single"  d:ItemsSource="{d:SampleData ItemCount=5}"  Grid.RowSpan="2" Grid.Row="1" Grid.ColumnSpan="2" >
+        <ListView x:Name="RecordsCtrl_lv" SelectionMode="Single" Grid.Row="1" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="100" DisplayMemberBinding="{Binding Date, StringFormat=dd-MM-yyyy}">
@@ -29,5 +28,6 @@
                 </GridView>
             </ListView.View>
         </ListView>
+        <Label Content="{Binding Title}" HorizontalAlignment="Left" Width="403" />
     </Grid>
 </UserControl>
